--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-gallery": "^1.3.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
@@ -32,6 +34,7 @@
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-image-gallery": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
