--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
+    "react-particles": "^2.12.2",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
